featured card duration alignment fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -307,10 +307,12 @@
   font-size: 0.8rem;
   color: #00ff88;
   font-weight: bold;
-  align-items: center;
   gap: 5px;
-  display: flex;
-  
+  display: flex; 
+}
+.card-footer span{
+    display: flex;
+    gap: 10px;
 }
 
 /* ---Host Section--- */
